# spmv

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
demos/: CMakeLists.txt  CreateA.cpp  cg.cpp  cg_cuda.cpp  cg_openmp.cpp  cg_sycl.cpp  cgmain_sycl.cpp  matvecmain.cpp  restrictmain.cpp  spmv.cpp  spmv_cuda.cpp  spmv_openmp.cpp  spmv_openmp_offload.cpp  spmv_sycl.cpp
spmv/: CMakeLists.txt  L2GMap.cpp  L2GMap.h  Matrix.cpp  Matrix.h  cg.cpp  cg.h  cg_sycl.cpp  cg_sycl.h  config.h.in  coo_kernels.cpp  coo_kernels.h  coo_matrix.cpp  coo_matrix.h  csr_kernels.cpp  csr_kernels.h  csr_matrix.cpp  csr_matrix.h  device_executor.cpp  device_executor.h  mpi_types.h  mpi_utils.h  read_petsc.cpp  read_petsc.h  reference_executor.cpp  reference_executor.h  spmv.h  sub_matrix.h
spmv/cuda/: CMakeLists.txt  L2GMap.cu  Matrix.cu  cg.cu  cg.cuda.cu  cg_cuda.h  coo_kernels.cuda.cpp  csr_kernels.cuda.cu  cuda_executor.cpp  cuda_executor.cu  cuda_executor.h  cuda_helper.h  helper_cuda.h
spmv/openacc/: CMakeLists.txt  csr_kernels.openacc.cpp  openacc_executor.cpp  openacc_executor.h
spmv/openmp/: CMakeLists.txt  cg.openmp.cpp  cg_openmp.h  csr_kernels.openmp.cpp  omp_executor.cpp  omp_executor.h
spmv/openmp_offload/: CMakeLists.txt  Matrix.openmp.cpp  csr_kernels.openmp_offload.cpp  omp_offload_executor.cpp  omp_offload_executor.h
spmv/sycl/: CMakeLists.txt  Matrix.sycl.cpp  blas_sycl.h  cg.sycl.cpp  cg_sycl.h  csr_kernels.sycl.cpp  sycl_executor.cpp  sycl_executor.h
tests/: CMakeLists.txt  test_spmv.cpp  test_spmv_cuda.cpp  test_spmv_openacc.cpp  test_spmv_openmp.cpp  test_spmv_openmp_offload.cpp  test_spmv_sycl.cpp
